refactor: clean up unused imports and empty lines across DTO and service classes